--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "openstack-ansible"]
 	path = openstack-ansible
-	url = git://git.openstack.org/openstack/openstack-ansible
+	url = git@github.com:abelboldu/openstack-ansible.git
