--- a/etc/user_midonet_variables.yml
+++ b/etc/user_midonet_variables.yml
@@ -12,16 +12,19 @@ neutron_plugin_base:
 horizon_enable_neutron_vpnaas: True
 
 neutron_midonet_conf_ini_overrides: {}
+#
+cassandra_max_heap_size: 1536M
+cassandra_heap_newsize: 100M
 
 ############DO NOT EDIT BELOW THIS LINE############
 
-neutron_plugin_type: midonet
+neutron_plugin_type: ml2.lxb
 
-neutron_plugins:
-  midonet:
-    plugin_conf_ini_overrides: "{{ neutron_midonet_conf_ini_overrides }}"
-    plugin_core: midonet.neutron.plugin_v2.MidonetPluginV2
-    plugin_ini: plugins/midonet/midonet.ini
+#neutron_plugins:
+#  midonet:
+#    plugin_conf_ini_overrides: "{{ neutron_midonet_conf_ini_overrides }}"
+#    plugin_core: midonet.neutron.plugin_v2.MidonetPluginV2
+#    plugin_ini: plugins/midonet/midonet.ini
 
 neutron_metering: False
 neutron_l3: False
@@ -32,7 +35,7 @@ neutron_bgp: False
 neutron_dhcp: False
 neutron_metadata: False
 
-neutron_plugin_loaded_base: "{% for plugin in neutron_plugin_base %}{{ plugin }}{% if not loop.last %},{% endif %}{% endfor %}"
+#neutron_plugin_loaded_base: "{% for plugin in neutron_plugin_base %}{{ plugin }}{% if not loop.last %},{% endif %}{% endfor %}"
 
 midonet_vpnaas: "{% if ('vpnaas' in neutron_plugin_base) and (neutron_plugin_type == 'midonet') %}True{% else %}False{% endif %}"
 midonet_vpnaas_service_provider: VPN:Midonet:midonet.neutron.services.vpn.service_drivers.midonet_ipsec.MidonetIPsecVPNDriver:default
