--- a/roles/haproxy-config/tasks/main.yml
+++ b/roles/haproxy-config/tasks/main.yml
@@ -7,7 +7,7 @@
     owner: "root"
     group: "root"
   with_items:
-    - midonet_cluster_api
+    - midonet_cluster
 
 - name: Regenerate HAProxy configuration
   assemble:
