--- a/etc/user_midonet_variables.yml
+++ b/etc/user_midonet_variables.yml
@@ -74,17 +74,26 @@ neutron_plugin_base:
 
 horizon_enable_neutron_vpnaas: True
 
-neutron_midonet_conf_ini_overrides: {}
-
 ############DO NOT EDIT BELOW THIS LINE############
 
-neutron_plugin_type: ml2.lxb
+neutron_plugin_type: ml2.midonet
 
-#neutron_plugins:
-#  midonet:
-#    plugin_conf_ini_overrides: "{{ neutron_midonet_conf_ini_overrides }}"
-#    plugin_core: midonet.neutron.plugin_v2.MidonetPluginV2
-#    plugin_ini: plugins/midonet/midonet.ini
+neutron_plugins:
+  ml2.midonet:
+    driver_firewall: neutron.agent.linux.iptables_firewall.IptablesFirewallDriver
+    drivers_type: "midonet,uplink"
+    network_types: "midonet"
+    mechanisms: "midonet"
+    plugin_conf_ini_overrides: "{{ neutron_ml2_conf_ini_overrides }}"
+    plugin_core: ml2
+    plugin_ini: plugins/ml2/ml2_conf.ini
+
+neutron_provider_networks:
+  network_flat_networks: "flat"
+  network_types: "midonet"
+  network_vlan_ranges: 
+  network_vxlan_ranges:
+  network_mappings:
 
 neutron_metering: False
 neutron_l3: False
